--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -91,34 +91,34 @@ var subscriptions = [];
 						</ol>
 					</wicket:child>
 				</div>
-					<div>
-						<small>
-					 	<ul class="styles">
-					 	  <li><b>Live Chat</b></li>
-					   	  <li><span id="LiveChat_1376906919"></span></li>
-					   	  <hr>
-					   	  <li><b>Sms</b></li>
-					   	  <li>08112225702</li>
-					   	  <hr>
-						  <li><b>Call</b></li>
-						  <li>022-5228987</li>
-						  <li>022-70686080</li>
-						  <li>0815720393259</li>
-						  <li>082119216047</li>
-						  <li>087821353690</li>
-					   	  <hr>
-					      <li><b>Bbm</b></li>
-					      <li>24C5DBE3</li>
-					      <hr>
-					      <li><b>Ym</b></li>
-					      <li>Tuneeca / CS_Tuneeca</li>
-						</ul>
-						</small>
-						<a class="styles-open"  href="#closeoptions">  </a>
-						 <div class="styles-closed " >
-							<a href="#options"></a>
-						</div>
-					</div>
+<!-- 					<div> -->
+<!-- 						<small> -->
+<!-- 					 	<ul class="styles"> -->
+<!-- 					 	  <li><b>Live Chat</b></li> -->
+<!-- 					   	  <li><span id="LiveChat_1376906919"></span></li> -->
+<!-- 					   	  <hr> -->
+<!-- 					   	  <li><b>Sms</b></li> -->
+<!-- 					   	  <li>08112225702</li> -->
+<!-- 					   	  <hr> -->
+<!-- 						  <li><b>Call</b></li> -->
+<!-- 						  <li>022-5228987</li> -->
+<!-- 						  <li>022-70686080</li> -->
+<!-- 						  <li>0815720393259</li> -->
+<!-- 						  <li>082119216047</li> -->
+<!-- 						  <li>087821353690</li> -->
+<!-- 					   	  <hr> -->
+<!-- 					      <li><b>Bbm</b></li> -->
+<!-- 					      <li>24C5DBE3</li> -->
+<!-- 					      <hr> -->
+<!-- 					      <li><b>Ym</b></li> -->
+<!-- 					      <li>Tuneeca / CS_Tuneeca</li> -->
+<!-- 						</ul> -->
+<!-- 						</small> -->
+<!-- 						<a class="styles-open"  href="#closeoptions">  </a> -->
+<!-- 						 <div class="styles-closed " > -->
+<!-- 							<a href="#options"></a> -->
+<!-- 						</div> -->
+<!-- 					</div> -->
 			</div><!--/row-->
 				
 				<footer class="footer" wicket:id="footer">
