--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_venom.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_venom.html
@@ -54,6 +54,8 @@ var subscriptions = [];
 </head>
 
 <body>
+	<div wicket:id="dev">[DebugBar]</div>
+
 	<header wicket:id="header"></header>
 	<div class="" wicket:id="navbar">
 			Navbar... (see Navbar.html)
