--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -59,6 +59,7 @@ var subscriptions = [];
 </head>
 
 <body>
+	<div wicket:id="dev">[DebugBar]</div>
 
 	<header wicket:id="header"></header>
 	<div class="" wicket:id="navbar">
