--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage_edianaarea.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage_edianaarea.html
@@ -54,6 +54,7 @@
 </head>
 
 <body>
+	<div wicket:id="dev">[DebugBar]</div>
 
 	<header wicket:id="header"></header>
 	<div class="BackendNavbar" wicket:id="navbar">
@@ -101,7 +102,6 @@
 	<script type="text/javascript" src="something.js" wicket:id="footerJavaScriptLinks"></script>
 	<script type="text/javascript" wicket:id="footerJavaScriptSources">[footerJavaScriptSources]</script>
 	
-	<script type="text/javascript" src="something.js" wicket:id="pageJavaScriptLinks"></script>
 	<script wicket:id="pageJavaScriptSources" type="text/javascript"></script>
 
 	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
