--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -174,7 +174,11 @@ var subscriptions = [];
 	 		};
 			
 			$().UItoTop({ easingType: 'easeOutQuart' });
-			
+						
+		});
+		
+		$('.pagination ul li a').live('click', function(){
+				$('a#toTop').click();
 		});
  	</script>
 </body>
