--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
@@ -32,12 +32,14 @@
 							<input type="text" wicket:id="displayName"/>
 						</div>
 					</div>
+					<wicket:enclosure child="imageId">
 					<div class="control-group">
 						<label class="control-label" wicket:for="imageId">Image ID</label>	
 						<div class="controls">
 							<input type="text" wicket:id="imageId"/>
 						</div>
 					</div>
+					</wicket:enclosure>
 					<div class="control-group">
 						<label class="control-label" wicket:for="color">HTML Color</label>	
 						<div class="controls">
