--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_edianaarea.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_edianaarea.html
@@ -80,7 +80,7 @@ var subscriptions = [];
 					<div wicket:id="afterHeader" class="afterHeader">
 					</div>
 					<div wicket:id="feedback" class="feedback"></div>
-					<div class="row">
+					<div class="">
 						<wicket:child>
 							<ol class="featured-products">
 								<div id="featuredProducts">
