--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_middea.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_middea.html
@@ -117,5 +117,26 @@ var subscriptions = [];
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
 	})();
 	</script>
+	
+	<script type="text/javascript">
+		$(document).ready(function() {
+			var defaults = {
+				containerID : 'toTop', // fading element id
+				containerHoverID : 'toTopHover', // fading element hover id
+				scrollSpeed : 1200,
+				easingType : 'linear'
+			};
+
+			$().UItoTop({
+				easingType : 'easeOutQuart'
+			});
+
+		});
+
+		$('.pagination ul li a').live('click', function() {
+			$('a#toTop').click();
+		});
+	</script>
+	
 </body>
 </html>
