--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
@@ -115,6 +115,26 @@ var subscriptions = [];
 	<script wicket:id="pageJavaScriptSources" type="text/javascript"></script>
 
 	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
+	
+	<script type="text/javascript">
+		$(document).ready(function() {
+			var defaults = {
+				containerID : 'toTop', // fading element id
+				containerHoverID : 'toTopHover', // fading element hover id
+				scrollSpeed : 1200,
+				easingType : 'linear'
+			};
+
+			$().UItoTop({
+				easingType : 'easeOutQuart'
+			});
+
+		});
+
+		$('.pagination ul li a').live('click', function() {
+			$('a#toTop').click();
+		});
+	</script>
 
 </body>
 </html>
