--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_venom.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_venom.html
@@ -143,5 +143,25 @@ var subscriptions = [];
   });
 </script>
 
+	<script type="text/javascript">
+		$(document).ready(function() {
+			var defaults = {
+				containerID : 'toTop', // fading element id
+				containerHoverID : 'toTopHover', // fading element hover id
+				scrollSpeed : 1200,
+				easingType : 'linear'
+			};
+
+			$().UItoTop({
+				easingType : 'easeOutQuart'
+			});
+
+		});
+
+		$('.pagination ul li a').live('click', function() {
+			$('a#toTop').click();
+		});
+	</script>
+
 </body>
 </html>
