--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
@@ -61,50 +61,39 @@ var subscriptions = [];
 
 <body>
 	<div wicket:id="dev">[DebugBar]</div>
-	<div class="container">
-      <div class="masthead">
-        <div class="navbar">
-          <header wicket:id="header"></header>
-			<div class="" wicket:id="navbar">
-					Navbar... (see Navbar.html)
-			</div>
-        </div><!-- /.navbar -->
-      </div>
 
-      <!-- konten -->
-      <div class="jumbotron">
-        <div class="span12">
+	<header wicket:id="header"></header>
+	<div class="" wicket:id="navbar">
+			Navbar... (see Navbar.html)
+	</div>
+	<div class="span12">
 		<div wicket:id="addedInfo">
 		</div>
  	</div>
 	<div class="clearfix"></div>
-		<div class="container">
-				<div class="row">
-					<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
-						<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+	<div class="container">
+			<div class="row">
+				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
+					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+				</div>
+				<div class="span9" wicket:id="contentColumn">
+					<div wicket:id="afterHeader" class="afterHeader">
 					</div>
-					<div class="span9" wicket:id="contentColumn">
-						<div wicket:id="afterHeader" class="afterHeader">
-						</div>
-						<div wicket:id="feedback" class="feedback"></div>
-							<wicket:child>
-								<ol class="featured-products">
-									<div id="featuredProducts">
-										<li><a href="#">Product name</a></li>
-									</div>
-								</ol>
-							</wicket:child>
-					</div>
-				</div><!--/row-->
-		</div><!--/.fluid-container-->
-      </div> <!-- konten -->
-      <div class="footer">
-		<footer class="" wicket:id="footer">
-			<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
-		</footer>
-      </div>
-
-    </div> <!-- /container -->
+					<div wicket:id="feedback" class="feedback"></div>
+						<wicket:child>
+							<ol class="featured-products">
+								<div id="featuredProducts">
+									<li><a href="#">Product name</a></li>
+								</div>
+							</ol>
+						</wicket:child>
+				</div>
+			</div><!--/row-->
+	</div><!--/.fluid-container-->
+	
+	<footer class="footerMiddea" wicket:id="footer">
+		<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
+	</footer>
 
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
  	
