--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
@@ -61,10 +61,11 @@ var subscriptions = [];
 
 <body>
 	<div wicket:id="dev">[DebugBar]</div>
-
-	<header wicket:id="header"></header>
-	<div class="" wicket:id="navbar">
-			Navbar... (see Navbar.html)
+	<div class="container">
+		<header wicket:id="header"></header>
+		<div class="" wicket:id="navbar">
+				Navbar... (see Navbar.html)
+		</div>
 	</div>
 	<div class="span12">
 		<div wicket:id="addedInfo">
