--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -225,9 +225,10 @@ body {
 
 		});
 
-		$('.pagination ul li a').live('click', function() {
-			$('a#toTop').click();
-		});
+		//Kate Mahendri
+// 		$('.pagination ul li a').live('click', function() {
+// 			$('a#toTop').click();
+// 		});
 	</script>
 </body>
 </html>
