--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
@@ -121,9 +121,10 @@ var subscriptions = [];
 
 		});
 
-		$('.pagination ul li a').live('click', function() {
-			$('a#toTop').click();
-		});
+		//Kate Mahendri
+// 		$('.pagination ul li a').live('click', function() {
+// 			$('a#toTop').click();
+// 		});
 	</script>
 
 </body>
