--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermDetailPanel.html
@@ -11,11 +11,11 @@
 </wicket:head>
 <wicket:panel>
 	<div class="row">
-		<div class="box span9" style="margin-top:0;">
-			<div class="box-header well">
+		<div class="span9" style="margin-top:0;">
+			<h4 class="MarginTopClear">
 					<span wicket:id="kind">Colors</span> &gt; <span wicket:id="termUName">base_red</span>
-			</div>
-			<div class="box-content">
+			</h4>
+			<div class="box-content-border">
 				<form wicket:id="form" class="form form-horizontal">
 					<div class="control-group">
 						<label class="control-label" wicket:for="name"><abbr title="(Underscored) Unique Name">UName</abbr> *</label>	
