--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
@@ -1,12 +1,12 @@
 <wicket:panel>
 	<div class="row">
-		<div class="box span9" style="margin-top:0;">
-			<div class="box-header well">
+		<div class="span9" style="margin-top:0;">
+			<h4 class="MarginTopClear">
 					<span wicket:id="kindDisplayName">Colors</span>
-			</div>
-			<div class="box-content">
+			</h4>
+			<div class="box-content-border">
 				<div class="alert alert-info">
-			Only custom terms (with namespace other than <tt>base</tt>) are editable.
+				Only custom terms (with namespace other than <tt>base</tt>) are editable.
 			</div>
 			<div class="btn-toolbar">
 				<a wicket:id="addLink" href="#" class="btn btn-info"><i class="icon-plus-sign icon-white"></i> New</a>
