--- a/site/src/main/java/org/soluvas/web/googleanalytics/GoogleAnalyticsPanel.html
+++ b/site/src/main/java/org/soluvas/web/googleanalytics/GoogleAnalyticsPanel.html
@@ -1,23 +1,11 @@
 <wicket:panel>
-	<script type="text/javascript">
-		var _gaq = _gaq || [];
-	</script>
-	
-	<script type="text/javascript" wicket:id="trackerId">
-		_gaq.push([ '_setAccount', 'UA-38451310-1' ]);
-	</script>
-	
-	<script type="text/javascript">
-	_gaq.push([ '_trackPageview' ]);
-		(function() {
-			var ga = document.createElement('script');
-			ga.type = 'text/javascript';
-			ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl'
-					: 'http://www')
-					+ '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0];
-			s.parentNode.insertBefore(ga, s);
-		})();
-	</script>
+<script wicket:id="trackerId">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-xxxxxx-x', 'example.com');
+  ga('send', 'pageview');
+</script>
 </wicket:panel>
