--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -15,6 +15,7 @@
 	<!-- Le styles -->
 
 	<link wicket:id="bootstrapCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link wicket:id="bootstrapThemeCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap3-theme.min.css" rel="stylesheet" />
 	<style type="text/css">
       body {
 /* 		padding-top: 10px; */
