--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
@@ -14,7 +14,8 @@
 
 	<!-- Le styles -->
 
-	<link wicket:id="bootstrapCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link wicket:id="bootstrapCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap3.min.css" rel="stylesheet" />
+	<link wicket:id="bootstrapThemeCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap3-theme.min.css" rel="stylesheet" />
 	<style type="text/css">
       body {
 /*         padding-top: 60px; */
