--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -16,6 +16,7 @@
 <link wicket:id="bootstrapCss"
 	href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css"
 	rel="stylesheet" />
+	<link wicket:id="bootstrapThemeCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap3-theme.min.css" rel="stylesheet" />
 <style type="text/css">
 body {
 	/*         padding-top: 60px; */
