--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage_middea.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BackendPage_middea.html
@@ -20,6 +20,7 @@
 	<!-- Le styles -->
 
 	<link wicket:id="bootstrapCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link wicket:id="bootstrapThemeCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap3-theme.min.css" rel="stylesheet" />
 	<style type="text/css">
       body {
 /*         padding-top: 60px; */
