--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
@@ -68,12 +68,12 @@ var subscriptions = [];
 		<div wicket:id="addedInfo">
 		</div>
  	</div>
-	<div class="clearfix"></div>
+	<header wicket:id="header">
+	</header>
+	<div class="" wicket:id="navbar">
+			Navbar... (see Navbar.html)
+	</div>
 	<div class="container">
-			<header wicket:id="header"></header>
-			<div class="" wicket:id="navbar">
-					Navbar... (see Navbar.html)
-			</div>
 			<div class="row">
 				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
 					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
