--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
@@ -73,27 +73,29 @@ var subscriptions = [];
 	<div class="" wicket:id="navbar">
 			Navbar... (see Navbar.html)
 	</div>
-	<div class="container">
-			<div class="row">
-				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
-					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
-				</div><!--/span-->
-				
-				<div class="span9" wicket:id="contentColumn">
-					<div wicket:id="afterHeader" class="afterHeader">
-							<!-- 		Carousel Images is loading.. -->
+	<div class="">
+		<div class="container">
+				<div class="row">
+					<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
+						<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+					</div><!--/span-->
+					
+					<div class="span9" wicket:id="contentColumn">
+						<div wicket:id="afterHeader" class="afterHeader">
+								<!-- 		Carousel Images is loading.. -->
+						</div>
+						<div wicket:id="feedback" class="feedback"></div>
+						<wicket:child>
+							<ol class="featured-products">
+								<div id="featuredProducts">
+									<li><a href="#">Product name</a></li>
+								</div>
+							</ol>
+						</wicket:child>
 					</div>
-					<div wicket:id="feedback" class="feedback"></div>
-					<wicket:child>
-						<ol class="featured-products">
-							<div id="featuredProducts">
-								<li><a href="#">Product name</a></li>
-							</div>
-						</ol>
-					</wicket:child>
-				</div>
-			</div><!--/row-->
-	</div><!--/.fluid-container-->
+				</div><!--/row-->
+		</div><!--/.fluid-container-->
+    </div>
 	<div class="clearfix"></div>
 	<footer class="footer" wicket:id="footer">
 		<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
