OPEN - issue BC-1670: Upgrade to Bootstrap 3 https://idbippo.atlassian.net/browse/BC-1670

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -14,8 +14,6 @@
 
 	<!-- Le styles -->
 
-	<link wicket:id="bootstrapCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css" rel="stylesheet" />
-	<link wicket:id="bootstrapThemeCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap3-theme.min.css" rel="stylesheet" />
 	<style type="text/css">
       body {
 /* 		padding-top: 10px; */
@@ -25,7 +23,6 @@
 /*         padding: 9px 0; */
 /*       } */
     </style>	
-	<link wicket:id="bootstrapResponsiveCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
 	<link wicket:id="soluvasCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap-patches.css" rel="stylesheet" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
@@ -134,8 +131,8 @@ var subscriptions = [];
 // 		});
 	</script>
 	
-	<script src="http://code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
-	
+	<wicket:container wicket:id="footer-container"/>
+
 	<script>
 		$(document).ready(function(){
 			$("ul.accordion a.name").click(function(){
