--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_gray.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_gray.html
@@ -13,9 +13,6 @@
 	<meta name="author" content="Soluvas" />
 
 	<!-- Le styles -->
-
-	<link wicket:id="bootstrapCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap.css" rel="stylesheet" />
-	<link wicket:id="bootstrapThemeCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap3-theme.min.css" rel="stylesheet" />
 	<style type="text/css">
       body {
 /*         padding-top: 60px; */
@@ -25,7 +22,6 @@
 /*         padding: 9px 0; */
 /*       } */
     </style>	
-	<link wicket:id="bootstrapResponsiveCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
 	<link wicket:id="soluvasCss" href="/static/skin/org.soluvas.web.bootstrap/css/bootstrap-patches.css" rel="stylesheet" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
@@ -113,6 +109,8 @@ var subscriptions = [];
 
 	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
 	
+	<wicket:container wicket:id="footer-container"/>
+
 	<script type="text/javascript">
 		$(document).ready(function() {
 			var defaults = {
