--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
@@ -96,14 +96,10 @@ body {
 		<div wicket:id="addedInfo"></div>
 	</div>
 	<div class="clearfix"></div>
-	<div class="container">
-		<div class="row">
-			<header wicket:id="header"></header>
-			<header id="header" class="">
-				<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
-			</header>
-		</div>
-	</div>
+	<header wicket:id="header"></header>
+	<header id="header" class="container">
+		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+	</header>
 	<div class="container">
 		<div class="row">
 			<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
