--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
@@ -97,10 +97,10 @@ body {
 	</div>
 	<div class="clearfix"></div>
 	<header wicket:id="header"></header>
-	<header id="header" class="container">
-		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
-	</header>
-	<div class="jumbotron">
+		<header id="header" class="container">
+			<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+		</header>
+	<div class="strip">
 	</div>
 	<div class="container">
 		<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
