--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
@@ -7,9 +7,17 @@
 	lang="id">
 <head>
 	<meta charset="utf-8" />
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="js/ie8/ie8-responsive-file-warning.js"></script><![endif]-->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 </head>
 
-<body>
+<body class="body-bucket-admin">
  <section id="container">
       <!--header start-->
       <header class="header fixed-top clearfix">
@@ -223,11 +231,6 @@
               </ul>
             </li>
             <!-- user login dropdown end -->
-            <li>
-              <div class="toggle-right-box">
-                <div class="fa fa-bars"></div>
-              </div>
-            </li>
           </ul>
           <!--search & user info end-->
         </div>
