OPEN - issue BC-1667: Automated Tenant Creation https://idbippo.atlassian.net/browse/BC-1667

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_rumahlangsing.html
@@ -103,6 +103,7 @@ var subscriptions = [];
 
 	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
 	
+	<wicket:container wicket:id="footer-container"/>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			var defaults = {
