--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_venom.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_venom.html
@@ -118,6 +118,8 @@ var subscriptions = [];
 
 	<script wicket:id="alexaCertifyScript">[AlexaCertifyScript]</script>
 
+	<wicket:container wicket:id="footer-container"/>
+
 <!-- must put at bottom because requires jQuery -->
 <script type="text/javascript" > 
 	$(document).ready(function() {
