--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/term/TermTablePanel.html
@@ -1,21 +1,27 @@
 <wicket:panel>
 	<div class="row">
-		<div class="span9" style="margin-top:0;">
-			<h4 class="MarginTopClear">
-					<span wicket:id="kindDisplayName">Colors</span>
-			</h4>
-			<div class="box-content-border">
-				<div class="alert alert-info">
-				Only custom terms (with namespace other than <tt>base</tt>) are editable.
-			</div>
-			<div class="btn-toolbar">
-				<a wicket:id="addLink" href="#" class="btn btn-info"><i class="icon-plus-sign icon-white"></i> New</a>
-			</div>
-			<table class="table table-bordered table-striped" wicket:id="table">
-				[table]
-			</table>
-			</div>
+		<div class="col-sm-12">
+	    	<section class="panel">
+	        	<header class="panel-heading">
+	          		<h3>
+	          			<span wicket:id="kindDisplayName">Colors</span>
+	          		</h3>
+	               	<span class="tools pull-right">
+	                   	<a href="javascript:;" class="fa fa-chevron-down"></a>
+	                </span>
+				</header>
+				<div class="panel-body">
+					<div class="alert alert-info">
+						Only custom terms (with namespace other than <tt>base</tt>) are editable.
+					</div>
+					<a wicket:id="addLink" href="#" class="btn btn-success"><i class="fa fa-plus"></i> New</a>
+					<table class="table table-bordered table-striped" wicket:id="table" style="margin-top: 20px">
+						[table]
+					</table>
+				</div>
+			</section>
 		</div>
 	</div>
 </wicket:panel>
+
 
