--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html wicket:id="html" lang="id">
 <head>
-	<meta charset="utf-8" />
-	<title><span wicket:id="pageTitle"/> <span wicket:id="pageTitleSuffix"/></title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta wicket:id="metaDescription" name="description" content="Soluvas Starter Web Application" />
-	<meta wicket:id="metaKeywords" name="keywords" content="Soluvas Starter Web Application" />
-	<meta wicket:id="ogTitle" property="og:title" content="The Rock" />
-	<meta wicket:id="ogType" property="og:type" content="video.movie" />
-	<meta wicket:id="ogUrl" property="og:url" content="http://www.imdb.com/title/tt0117500/" />
-	<meta wicket:id="ogImage" property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
-	<meta name="author" content="Soluvas" />
+<meta charset="utf-8" />
+<title><span wicket:id="pageTitle" /> <span
+	wicket:id="pageTitleSuffix" /></title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta wicket:id="metaDescription" name="description"
+	content="Soluvas Starter Web Application" />
+<meta wicket:id="metaKeywords" name="keywords"
+	content="Soluvas Starter Web Application" />
+<meta wicket:id="ogTitle" property="og:title" content="The Rock" />
+<meta wicket:id="ogType" property="og:type" content="video.movie" />
+<meta wicket:id="ogUrl" property="og:url"
+	content="http://www.imdb.com/title/tt0117500/" />
+<meta wicket:id="ogImage" property="og:image"
+	content="http://ia.media-imdb.com/images/rock.jpg" />
+<meta name="author" content="Soluvas" />
 <!-- Le styles -->
 
 <style type="text/css">
@@ -27,6 +32,8 @@ body {
 	rel="stylesheet" />
 <link
 	href='http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,400italic,600,600italic'
+	rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Oswald:300'
 	rel='stylesheet' type='text/css'>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -83,11 +90,12 @@ body {
 	<div wicket:id="dev">[DebugBar]</div>
 
 	<header wicket:id="header"></header>
-	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+	<header id="header" class="container">
+		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+	</header>
 	<div class="container">
 		<div style="display: none;" wicket:id="addedInfo"></div>
 	</div>
-	<div class="clearfix"></div>
 	<div class="container">
 		<!-- 		    <ul class="breadcrumb"> -->
 		<!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
@@ -176,7 +184,7 @@ body {
 		});
 	</script>
 
-	<wicket:container wicket:id="footer-container"/>
+	<wicket:container wicket:id="footer-container" />
 
 	<!-- must put at the bottom because requires jQuery -->
 	<script type="text/javascript">
@@ -221,9 +229,9 @@ body {
 		});
 
 		//Kate Mahendri
-// 		$('.pagination ul li a').live('click', function() {
-// 			$('a#toTop').click();
-// 		});
+		// 		$('.pagination ul li a').live('click', function() {
+		// 			$('a#toTop').click();
+		// 		});
 	</script>
 
 </body>
