--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_metros.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html wicket:id="html" lang="id">
 <head>
-	<meta charset="utf-8" />
-	<title><span wicket:id="pageTitle"/> <span wicket:id="pageTitleSuffix"/></title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta wicket:id="metaDescription" name="description" content="Soluvas Starter Web Application" />
-	<meta wicket:id="metaKeywords" name="keywords" content="Soluvas Starter Web Application" />
-	<meta wicket:id="ogTitle" property="og:title" content="The Rock" />
-	<meta wicket:id="ogType" property="og:type" content="video.movie" />
-	<meta wicket:id="ogUrl" property="og:url" content="http://www.imdb.com/title/tt0117500/" />
-	<meta wicket:id="ogImage" property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
-	<meta name="author" content="Soluvas" />
+<meta charset="utf-8" />
+<title><span wicket:id="pageTitle" /> <span
+	wicket:id="pageTitleSuffix" /></title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta wicket:id="metaDescription" name="description"
+	content="Soluvas Starter Web Application" />
+<meta wicket:id="metaKeywords" name="keywords"
+	content="Soluvas Starter Web Application" />
+<meta wicket:id="ogTitle" property="og:title" content="The Rock" />
+<meta wicket:id="ogType" property="og:type" content="video.movie" />
+<meta wicket:id="ogUrl" property="og:url"
+	content="http://www.imdb.com/title/tt0117500/" />
+<meta wicket:id="ogImage" property="og:image"
+	content="http://ia.media-imdb.com/images/rock.jpg" />
+<meta name="author" content="Soluvas" />
 <!-- Le styles -->
 
 <link wicket:id="bootstrapCss"
@@ -226,9 +231,32 @@ body {
 		});
 
 		//Kate Mahendri
-// 		$('.pagination ul li a').live('click', function() {
-// 			$('a#toTop').click();
-// 		});
+		// 		$('.pagination ul li a').live('click', function() {
+		// 			$('a#toTop').click();
+		// 		});
 	</script>
+
+	<!-- Google Code for Remarketing Tag -->
+	<!--------------------------------------------------
+Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. See more information and instructions on how to setup the tag on: http://google.com/ads/remarketingsetup
+--------------------------------------------------->
+	<script type="text/javascript">
+		/* <![CDATA[ */
+		var google_conversion_id = 989738871;
+		var google_custom_params = window.google_tag_params;
+		var google_remarketing_only = true;
+		/* ]]> */
+	</script>
+	<script type="text/javascript"
+		src="//www.googleadservices.com/pagead/conversion.js">
+		
+	</script>
+	<noscript>
+		<div style="display: inline;">
+			<img height="1" width="1" style="border-style: none;" alt=""
+				src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/989738871/?value=0&amp;guid=ON&amp;script=0" />
+		</div>
+	</noscript>
+
 </body>
 </html>
