--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -65,39 +65,43 @@ var subscriptions = [];
 			Navbar... (see Navbar.html)
 	</div>
 	<div class="span12">
-		<div wicket:id="addedInfo">
-		</div>
- 	</div>
+		<div wicket:id="addedInfo"></div>
+	</div>
 	<div class="clearfix"></div>
 	<div class="container">
-<!-- 		    <ul class="breadcrumb"> -->
-<!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
-<!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
-<!-- 			    <li class="active">Data</li> -->
-<!-- 		    </ul> -->
-			<div class="row">
-				<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
-					<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
-				</div><!--/span-->
-				
-				<div class="span9" wicket:id="contentColumn">
-					<div wicket:id="afterHeader" class="afterHeader">
-							<!-- 		Carousel Images is loading.. -->
-					</div>
-					<div wicket:id="feedback" class="feedback"></div>
-					<wicket:child>
-						<ol class="featured-products">
-							<div id="featuredProducts">
-								<li><a href="#">Product name</a></li>
-							</div>
-						</ol>
-					</wicket:child>
+		<!-- 		    <ul class="breadcrumb"> -->
+		<!-- 			    <li><a href="#">Home</a> <span class="divider">/</span></li> -->
+		<!-- 			    <li><a href="#">Library</a> <span class="divider">/</span></li> -->
+		<!-- 			    <li class="active">Data</li> -->
+		<!-- 		    </ul> -->
+		<div class="row">
+			<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
+				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
+			</div>
+			<!--/span-->
+
+			<div style="display: none;" class="span9" wicket:id="contentColumn">
+				<div wicket:id="afterHeader" class="afterHeader">
+					<!-- 		Carousel Images is loading.. -->
 				</div>
-			</div><!--/row-->
-			<footer class="footer" wicket:id="footer">
-				<small style="color: #808080;"> &middot; &copy; <a href="http://www.soluvas.com/">Soluvas</a> 2012</small>
-			</footer>
-	</div><!--/.fluid-container-->
+				<div wicket:id="feedback" class="feedback"></div>
+				<wicket:child>
+					<ol class="featured-products">
+						<div id="featuredProducts">
+							<li><a href="#">Product name</a></li>
+						</div>
+					</ol>
+				</wicket:child>
+			</div>
+		</div>
+		<!--/row-->
+		<footer class="footer" wicket:id="footer">
+			<small style="color: #808080;"> &middot; &copy; <a
+				href="http://www.soluvas.com/">Soluvas</a> 2012
+			</small>
+		</footer>
+	</div>
+	<!--/.fluid-container-->
 	<div class="clearfix"></div>
 	
 	<div wicket:id="beforeFooterJs">[beforeFooterJs]</div>
