--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -106,6 +106,20 @@ body {
 			<div wicket:id="afterHeader" class="afterHeader">
 				<!-- 		Carousel Images is loading.. -->
 			</div>
+			<div class="row bippo-highlight">
+				<div class="col-xs-6 col-md-3">
+					<img src="image/free-shipping.jpg" class="img-responsive">
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<img src="image/easy-payment.jpg" class="img-responsive">
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<img src="image/24-shipping.jpg" class="img-responsive">
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<img src="image/choice.jpg" class="img-responsive">
+				</div>
+			</div>
 			<div wicket:id="feedback" class="feedback"></div>
 			<wicket:child>
 				<ol class="featured-products">
