--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -91,21 +91,19 @@ body {
 <body>
 	<div wicket:id="dev">[DebugBar]</div>
 
-	<header wicket:id="header"></header>
-	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
 	<div class="container">
-		<div class="span3 sidebar-categories" wicket:id="sidebarColumn">
+		<header wicket:id="header"></header>
+		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+		<div class="sidebar-categories" wicket:id="sidebarColumn">
 			<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 		</div>
 		<!--/span-->
 
-		<div class="span9" wicket:id="contentColumn">
+		<div wicket:id="contentColumn">
 			<div wicket:id="afterHeader" class="afterHeader">
 				<!-- 		Carousel Images is loading.. -->
 			</div>
-			<div class="span12">
 				<div wicket:id="addedInfo"></div>
-			</div>
 			<div wicket:id="feedback" class="feedback"></div>
 			<wicket:child>
 				<ol class="featured-products">
