Modify appManifest lom support..

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
@@ -248,14 +248,14 @@
       <!--main content start-->
       <section id="main-content">
         <section class="wrapper">
-<wicket:child/>
-	
-<wicket:container wicket:id="footer-container"/>
+			<wicket:child/>
+			<wicket:container wicket:id="footer-container"/>
         </section>
       </section>
       <!--main content end-->
     </section>
 
+	<wicket:container wicket:id="googleanalytics"/>
 
 </body>
 </html>
