add oswald font demo 5.4

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -37,6 +37,8 @@ body {
 	rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Crete+Round'
 	rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Oswald:300'
+	rel='stylesheet' type='text/css'>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -103,7 +105,7 @@ body {
 			<div wicket:id="afterHeader" class="afterHeader">
 				<!-- 		Carousel Images is loading.. -->
 			</div>
-				<div wicket:id="addedInfo"></div>
+			<div wicket:id="addedInfo"></div>
 			<div wicket:id="feedback" class="feedback"></div>
 			<wicket:child>
 				<ol class="featured-products">
@@ -159,7 +161,7 @@ body {
 	</script>
 
 	<wicket:container wicket:id="footer-container" />
-	
+
 	<script>
 		$(document).ready(function() {
 			$("ul.accordion a.name").click(function() {
