fixed missed files..

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/AppPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/AppPage.html
@@ -25,7 +25,7 @@
         <div class="brand">
 
           <a href="index-2.html" class="logo">
-            <img src="images/logo.png" alt="">
+            <img src="#" alt="">
           </a>
           <div class="sidebar-toggle-box">
             <div class="fa fa-bars"></div>
@@ -117,7 +117,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="photo"><img alt="avatar" src="images/avatar-mini.jpg"></span>
+                    <span class="photo"><img alt="avatar" src="#"></span>
                     <span class="subject">
                       <span class="from">Jonathan Smith</span>
                       <span class="time">Just now</span>
@@ -129,7 +129,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="photo"><img alt="avatar" src="images/avatar-mini-2.jpg"></span>
+                    <span class="photo"><img alt="avatar" src="#"></span>
                     <span class="subject">
                       <span class="from">Jane Doe</span>
                       <span class="time">2 min ago</span>
@@ -141,7 +141,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="photo"><img alt="avatar" src="images/avatar-mini-3.jpg"></span>
+                    <span class="photo"><img alt="avatar" src="#"></span>
                     <span class="subject">
                       <span class="from">Tasi sam</span>
                       <span class="time">2 days ago</span>
@@ -153,7 +153,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="photo"><img alt="avatar" src="images/avatar-mini.jpg"></span>
+                    <span class="photo"><img alt="avatar" src="#"></span>
                     <span class="subject">
                       <span class="from">Mr. Perfect</span>
                       <span class="time">2 hour ago</span>
@@ -220,7 +220,7 @@
             <!-- user login dropdown start-->
             <li class="dropdown">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                <img alt="" src="images/avatar1_small.jpg">
+                <img alt="" src="#">
                 <span class="username">John Doe</span>
                 <b class="caret"></b>
               </a>
