--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_inggabia.html
@@ -92,17 +92,18 @@ body {
 
 <body>
 	<div wicket:id="dev">[DebugBar]</div>
+	<header wicket:id="header"></header>
+	<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
+	<!--/span-->
 
-		<header wicket:id="header"></header>
-		<div class="" wicket:id="navbar">Navbar... (see Navbar.html)</div>
-		<div class="sidebar-categories" wicket:id="sidebarColumn">
-			<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
-		</div>
-		<!--/span-->
-
+	<div wicket:id="afterHeader" class="afterHeader" style="display: none;">
+		<!-- 		Carousel Images is loading.. -->
+	</div>
+	<div class="row clearfix f-space30"></div>
+	<div class="container">
 		<div wicket:id="contentColumn">
-			<div wicket:id="afterHeader" class="afterHeader">
-				<!-- 		Carousel Images is loading.. -->
+			<div class="sidebar-categories" wicket:id="sidebarColumn">
+				<div wicket:id="sidebarBlocks">[sidebarBlocks]</div>
 			</div>
 			<div wicket:id="addedInfo"></div>
 			<div wicket:id="feedback" class="feedback"></div>
@@ -114,11 +115,12 @@ body {
 				</ol>
 			</wicket:child>
 		</div>
-		<footer class="footer" wicket:id="footer">
-			<small style="color: #808080;"> &middot; &copy; <a
-				href="http://www.soluvas.com/">Soluvas</a> 2012
-			</small>
-		</footer>
+	</div>
+	<footer class="footer" wicket:id="footer">
+		<small style="color: #808080;"> &middot; &copy; <a
+			href="http://www.soluvas.com/">Soluvas</a> 2012
+		</small>
+	</footer>
 	<!--/.fluid-container-->
 	<div class="clearfix"></div>
 
