--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_dedagangan.html
@@ -124,9 +124,9 @@ var subscriptions = [];
 		});
 
 		//Kate Mahendri
-// 		$('.pagination ul li a').live('click', function() {
-// 			$('a#toTop').click();
-// 		});
+		$('.pagination ul li a').live('click', function() {
+			$('a#toTop').click();
+		});
 	</script>
 
 </body>
