--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage_demo.html
@@ -87,6 +87,17 @@ body {
 	var subscriptions = [];
 </script>
 
+<script type="text/javascript">
+var __lc = {};
+__lc.license = 4370791;
+
+(function() {
+	var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+	lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+})();
+</script>
+
 </head>
 
 <body>
