--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/AppPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/AppPage.html
@@ -25,7 +25,7 @@
         <div class="brand">
 
           <a href="index-2.html" class="logo">
-            <!--  img src="#" alt=""-->
+<!--             <img src="http://i1104.photobucket.com/albums/h339/bippo_id/logo_web_zps7250a313.jpg~original" alt=""/> -->
           </a>
           <div class="sidebar-toggle-box">
             <div class="fa fa-bars"></div>
