--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
@@ -23,9 +23,8 @@
       <header class="header fixed-top clearfix">
         <!--logo start-->
         <div class="brand">
-
           <a href="index-2.html" class="logo">
-            <!--  img src="#" alt=""-->
+            <img src="http://i1104.photobucket.com/albums/h339/bippo_id/logo_web_zpsc67b811e.png~original" alt=""/>
           </a>
           <div class="sidebar-toggle-box">
             <div class="fa fa-bars"></div>
@@ -35,7 +34,7 @@
 
         <div class="nav notify-row" id="top_menu">
           <!--  notification start -->
-          <ul class="nav top-menu">
+          <ul class="nav top-menu" style="display: none;">
             <!-- settings start -->
             <li class="dropdown">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
@@ -213,7 +212,7 @@
         </div>
         <div class="top-nav clearfix">
           <!--search & user info start-->
-          <ul class="nav pull-right top-menu">
+          <ul class="nav pull-right top-menu" style="display: none;">
             <li>
               <input type="text" class="form-control search" placeholder=" Search">
             </li>
