IN PROGRESS - issue BC-1819: tombol print invoice atau download invoice belum berfungsi https://idbippo.atlassian.net/browse/BC-1819

--- a/site/src/main/java/org/soluvas/web/site/widget/CollectionColumnPanel.html
+++ b/site/src/main/java/org/soluvas/web/site/widget/CollectionColumnPanel.html
@@ -10,7 +10,7 @@ ol.collection-column {
 <ol class="collection-column">
 	<li wicket:id="values"><wicket:container wicket:id="value">[value]</wicket:container></li>
 	<wicket:enclosure child="more">
-	<li class="more" style="list-style-type: none"><small class="muted"><strong wicket:id="more">25</strong> more</small></li>
+	<li class="more" style="list-style-type: none"><small class="text-muted"><strong wicket:id="more">25</strong> more</small></li>
 	</wicket:enclosure>
 </ol>
 </wicket:panel>
