--- a/site/src/main/java/org/soluvas/web/site/widget/CompositeColumnPanel.html
+++ b/site/src/main/java/org/soluvas/web/site/widget/CompositeColumnPanel.html
@@ -2,7 +2,7 @@
 <span wicket:id="primary">[primary]</span>
 <dl style="margin-top: 0; margin-bottom: 0">
 <wicket:container wicket:id="columns">
-	<dt class="muted"><small wicket:id="header">[header]</small></dt>
+	<dt class="text-muted"><small wicket:id="header">[header]</small></dt>
 	<dd wicket:id="content">[content]</dd>
 </wicket:container>
 </dl>
