--- a/site/src/main/java/org/soluvas/web/site/widget/MapColumnPanel.html
+++ b/site/src/main/java/org/soluvas/web/site/widget/MapColumnPanel.html
@@ -1,7 +1,7 @@
 <wicket:panel>
 <dl style="margin-top: 0; margin-bottom: 0">
 <wicket:container wicket:id="entries">
-	<dt class="muted"><small wicket:id="key">[key]</small></dt>
+	<dt class="text-muted"><small wicket:id="key">[key]</small></dt>
 	<dd wicket:id="value">[value]</dd>
 </wicket:container>
 </dl>
