OPEN - issue BC-1851: Error saat add product varied di mall yang baru dibuat via open https://idbippo.atlassian.net/browse/BC-1851

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
@@ -116,7 +116,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="photo"><!--  img alt="avatar" src="#"--></span>
+                    <span class="photo"><!-- img alt="avatar" src="blank.png"--></span>
                     <span class="subject">
                       <span class="from">Jonathan Smith</span>
                       <span class="time">Just now</span>
@@ -128,7 +128,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="photo"><!--  img alt="avatar" src="#"--></span>
+                    <span class="photo"><!-- img alt="avatar" src="blank.png"--></span>
                     <span class="subject">
                       <span class="from">Jane Doe</span>
                       <span class="time">2 min ago</span>
@@ -140,7 +140,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="photo"><!--  img alt="avatar" src="#"--></span>
+                    <span class="photo"><!-- img alt="avatar" src="blank.png"--></span>
                     <span class="subject">
                       <span class="from">Tasi sam</span>
                       <span class="time">2 days ago</span>
@@ -152,7 +152,7 @@
                 </li>
                 <li>
                   <a href="#">
-                    <span class="photo"><!--  img alt="avatar" src="#"--></span>
+                    <span class="photo"><!-- img alt="avatar" src="blank.png"--></span>
                     <span class="subject">
                       <span class="from">Mr. Perfect</span>
                       <span class="time">2 hour ago</span>
@@ -219,7 +219,7 @@
             <!-- user login dropdown start-->
             <li class="dropdown">
               <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                <!--  img alt="" src="#"-->
+                <!--  img alt="person" src="blank.png"-->
                 <span class="username">John Doe</span>
                 <b class="caret"></b>
               </a>
