add oswald font

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/BootstrapPage.html
@@ -42,6 +42,8 @@ body {
 	rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Crete+Round'
 	rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Oswald:300'
+	rel='stylesheet' type='text/css'>
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
