dynamic logo back-end

--- a/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
+++ b/bootstrap/src/main/java/org/soluvas/web/bootstrap/backend/BackendPage.html
@@ -23,8 +23,8 @@
       <header class="header fixed-top clearfix">
         <!--logo start-->
         <div class="brand">
-          <a href="index-2.html" class="logo">
-            <img src="http://i1104.photobucket.com/albums/h339/bippo_id/logo-backend_zps21e2c03a.png~original" alt=""/>
+          <a wicket:id="homePageLink" class="logo">
+            <img alt="" wicket:id="logoImg" src="{+imagesUri}tenant_common/logo_web.png"/>
           </a>
           <div class="sidebar-toggle-box">
             <div class="fa fa-bars"></div>
